# martian_mines_ros2

./: .gitignore  CMakeLists.txt  Dockerfile  Pipfile  README.md  data_collector.py  package.xml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
config/: color_detection_sim.json  figure_operations.yaml  images.rviz  mission.rviz
docker/: Dockerfile-jetson  Dockerfile-minimal-intel-ros  docker-compose.yml
install/: local_setup.sh  setup.sh
launch/: example_trajectory_tracker.launch  figure_finder.launch  figures_vis.launch  mission.launch  realsense.launch
log/: latest_build
martian_mines/: setup.cfg  setup.py
martian_mines/config/: aruco.yaml  figures.rviz  real.yaml  sim.yaml
martian_mines/launch/: core.launch  core.launch.py  core.launch.xml  example_precision_landing.launch  example_precision_landing.launch.py  example_precision_landing.launch.xml  example_trajectory_tracker.launch.py  figure_finder.launch.py  figures_vis.launch.py  mission.launch.py  realsense.launch.py  rosbag_play.launch.py  rosbag_play.launch.xml  rosbag_record.launch.py  rosbag_record.launch.xml  rviz.launch  rviz.launch.py
martian_mines/martian_mines/src/: detection.py  detection_visualization.py  environment_visualization.py  figure_finder.py  mission_controller.py  precision_landing.py  report_uploader.py  trajectory_generator.py  trajectory_tracker.py
martian_mines_msgs/msg/: FigureMsgList.msg
martian_mines_ros2/figure_managment/: figure_collector.py
middleware_profiles/: cyclone_profile.xml
msg/: BoundingBoxLabeled.msg  FigureMsg.msg
offboard/: package.xml  setup.py
offboard_for_check_docker/: package.xml  setup.py
scripts/: build.sh  only_set_ip.sh  rviz.sh  set_GPU_params.sh  setup.sh  tmux_jetson.sh
src/: detection.py  detection_visualization.py  environemt_visualization.py  precision_landing.py  tf_start_pose.py  trajectory_generator.py
src/detectors/: abstract_detector.py  aruco_detector.py  yolo_detector.py
src/drone/: offboard.py
src/figure/: figure.py
src/figure_managment/: figure_collector.py
src/martian_mines/: package.xml  setup.cfg  setup.py
src/martian_mines/config/: color_detection.json  figure_operations.yaml  figures.rviz  images.rviz  mission.rviz  precision_landing.rviz  real.yaml  sim.yaml
src/martian_mines/launch/: core.launch.py  example_precision_landing.launch.py  example_trajectory_tracker.launch.py  figure_finder.launch.py  figures_vis.launch.py  mavros_plugins.yaml  mission.launch.py  realsense.launch.py  rosbag_play.launch.py  rosbag_record.launch.py  rviz.launch.py
src/martian_mines/martian_mines/: __init__.py
src/martian_mines/martian_mines/src/: bbox_publisher.py  camera_recorder.py  camera_remap.py  color_detection.py  data_collector.py  detection.py  environment_visualization.py  figure_finder.py  mission_controller.py  precision_landing.py  report_uploader.py  tf_start_pose.py  trajectory_generator.py  trajectory_tracker.py
src/martian_mines/martian_mines/src/detectors/: aruco_detector.py  yolo_detector.py
src/martian_mines/martian_mines/src/drone/: mavlink_telemetry.py  offboard.py  scan_trajectory.py
src/martian_mines/martian_mines/src/figure/: bounding_box.py  rejection_type.py
src/martian_mines/martian_mines/src/figure_managment/: figure_collector.py
src/martian_mines/martian_mines/src/mission/: state_collect.py  state_deliver.py  state_idle.py  state_machine.py  state_return.py  state_scanning.py  state_start.py
src/martian_mines/martian_mines/src/trajectory/: pure_pursuit.py  trajectory.py
src/martian_mines/martian_mines/src/utils/: bbox_mapper.py  coords_scaler.py  environment.py  extract_image_from_rosbag.py  gripper_controller.py  positioner.py  report_uploader.py  uploader.py
src/martian_mines/martian_mines/tests/utils/: test_coords_scaler.py
src/martian_mines/test/: test_figure_uploader_communication.py
src/martian_mines_msgs/: CMakeLists.txt  package.xml
src/martian_mines_msgs/msg/: BoundingBoxLabeled.msg  BoundingBoxLabeledList.msg  ENULocalOdometry.msg  ENULocalPosition.msg
src/martian_mines_ros2/: package.xml  requirements.txt  setup.cfg  setup.py
src/martian_mines_ros2/drone/: offboard.py
src/trajectory/: pure_pursuit.py
src/utils/: coords_scaler.py  environment.py  streamer.py  uploader.py
tests/: test_precision_landing.py  test_precision_landing_launch.py
(+19 files in other folders)
