<package format="3">
  <name>martian_mines_ros2</name>
  <version>0.1.0</version>
  <description>Martian Mines ROS2 category system for 2025 Droniada Challenge</description>

  <maintainer email="highflyers.polsl@gmail.com">highflyers</maintainer>
  <license>Apache-2.0</license>  <!-- Update this based on your actual license -->

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
